--- a/www/style.css
+++ b/www/style.css
@@ -40,16 +40,46 @@ a:hover {
 }
 
 code,
-pre {
+pre,
+input {
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace, serif;
   font-size: 0.92em;
   color: #d400ff;
 }
 
-code:before,
-code:after {
-  content: '`';
+pre {
+  background-color: #fafafa;
+  color: black;
+  border: 1px solid #f0f0f0;
+  border-radius: 0.25rem;
+  max-height: 8rem;
+  overflow-y: auto;
+  display: block;
+}
+
+input {
+  appearance: none;
+  border-radius: 0.25rem;
+  border: 1px solid #eee;
+  color: black;
+  font-variant-ligatures: none;
+  outline: none;
+  padding: 0.5rem;
+}
+
+button {
+  background: black;
+  border-radius: 0.25rem;
+  color: white;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace, serif;
+  font-weight: 700;
+  padding: 0.5rem 2rem;
+}
+
+input:focus {
+  border-color: blue;
 }
 
 p {
